--- a/pricing.html
+++ b/pricing.html
@@ -129,7 +129,7 @@
                             <li>Computer</li>
                             <li>Library</li>
                         </ul>
-                        <div class="readmore viewbtn"><a class="yellowa" href="#">View Details</a></div>
+                        <div class="viewbtn"><a class="yellowa" href="#">View Details</a></div>
                     </div>
                 </div>
                 <div class="col-lg-4">
@@ -142,7 +142,7 @@
                             <li>Computer</li>
                             <li>Library</li>
                         </ul>
-                        <div class="readmore viewbtn"><a class="bluea" href="#">View Details</a></div>
+                        <div class=" viewbtn"><a class="bluea" href="#">View Details</a></div>
                     </div>
                 </div>
                 <div class="col-lg-4 ">
